SentencesToSoar/Regress.g4
grammar Regress;
corpus   : block+ COMMENT* ;
block    : COMMENT* sentence FAILED? expected? ;
sentence : WORD (WORD | ',')* ('.' | TERMINATOR)? ;
expected : (COMMENT* rhs)+ ;
rhs      : '(' '@'? SYMBOL (attr value COMMENT?)+  ')' ;
attr     : '^' WORD ('.' WORD)* ;
value    : (variable | '@'? SYMBOL | WORD | NUMBER) ;
variable : '<' WORD '>' ;
SYMBOL   : [a-zA-Z] [0-9]+ ;
WORD     : [a-zA-Z] [a-zA-Z0-9\-']* ;
NUMBER   : '-'? ('.' DIGIT+ | DIGIT+ ('.' DIGIT*)? ) ;
fragment DIGIT : [0-9] ;
PAREN    : [()] ;
TERMINATOR : [?!;] ;
FAILED   : '#   FAILED!' ;
COMMENT  : '#' ~[\r\n]* ;
BRACKETS : '[' .*? ']' -> skip ;
WS       : [ \t\r\n]+ -> skip ;
